# gemma-alignment-rlhf

./: .gitignore  README.md  config.yaml  pyproject.toml
.agent/rules/: academic_style.md  env.md
.agent/workflows/: comparison.md  data-pipeline.md  grpo-training.md  ppo-training.md  rm-training.md  sft-training.md
checkpoints/sft_adapter/: adapter_config.json  train_log.jsonl
docs/: pipeline.md
notebooks/: 01_data_exploration.ipynb  train_jsonl_eda.ipynb
src/: config.py  fuse_model.py  split_data.py
src/dataset/: download_data.py  filter_data.py  process_data.py
src/sft/: callback.py  train.py
