[project]
name = "genrm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlx-lm>=0.30.7",
    "pandas>=3.0.0",
    "scienceplots>=2.2.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
